--- a/sessie-hooks/package.json
+++ b/sessie-hooks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sessie-hooks",
+  "name": "sessie-met-class",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,8 +10,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.3",
-    "react": "16.8.5",
-    "react-dom": "16.8.5",
+    "react": "16.10.0",
+    "react-dom": "16.10.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
